# DjangoProductManagementApp

./: .gitignore  README.md  package-lock.json  pyproject.toml
scripts/: pre_setup.py  run_app_dev.py  setup.py
src/: main.py  manage.py
src/DjangoProductManagementApp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/DjangoProductManagementApp/inventory/: admin.py  apps.py  context.py  models.py
src/DjangoProductManagementApp/inventory/migrations/: 0001_initial.py  0002_alter_category_options_alter_productcategory_options_and_more.py  0002_alter_inventorybatch_options_and_more.py  0003_alter_receipt_total_and_more.py  0004_alter_receiptproduct_options.py
src/DjangoProductManagementApp/inventory/templates/: tailwind_base.html
src/DjangoProductManagementApp/inventory/templates/inventory/: base_template.html  home.html  receipts.html
src/DjangoProductManagementApp/inventory/templates/inventory/components/: footer.html  navbar.html
src/DjangoProductManagementApp/inventory/templatetags/: custom_filters.py
src/custom_static/css/: base.css  home.css  receipts.css
src/custom_static/js/: cart.js  receipt.js
src/theme/static_src/: package-lock.json  package.json
src/theme/static_src/src/: styles.css
src/theme/templates/: base.html
