# TODO: Cleanup
# TODO: Headers w/ desc

[project]
name = "DjangoProductManagementApp"
version = "0.1.0"
description = ""
authors = [{ name = "Spokelax" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["Django>=5.2.1", "uvicorn>=0.34.2"]

[dependency-groups]
dev = ["colorama>=0.4.6", "Ruff>=0.11.10", "pdm>=2.24.1", "black>=25.1.0"]

[build-system]
requires = ["setuptools >= 80.7.1"]
build-backend = "setuptools.build_meta"

[tool.pdm.scripts]
# script = " { cmd = "...", help = "..." }
lint = { cmd = "ruff check src" }
format = { cmd = "ruff format src" }
"backend:start" = "uvicorn DjangoProductManagementApp.asgi:application --host 127.0.0.1 --port 8000 --app-dir src"
"backend:dev" = "uvicorn DjangoProductManagementApp.asgi:application --reload --host 127.0.0.1 --port 8000 --app-dir src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
exclude = ["venv", ".history", ".vscode"]
include = ["src/**/*.py"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# select = ["ALL"]
select = ["E", "F", "I", "UP", "W"] # Minimal #TODO: add full desc
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"
